# songPlayer

./: .gitignore  pyproject.toml
V1/: function_v1.py
V2/: main_V2.py
songplayer/: function.py  main.py
songplayer/V1/: main_v1.py
songplayer_current/: function.py  main.py  searcherPoF.py
